prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/lex_errors/octal_not_supported.nut
// EXPECT_ERROR: "octal numbers are not supported"
let x = 0755
